[package]
name = "rust_simple_neural_network"
version = "0.1.0"
authors = ["victorinno <rotc21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
ndarray-stats = "0.3.0"
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "rust_simple_neural_network"
harness = false
